Crappy UI again

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/Users/zainul/Platformer/TopDownShooter.apk"
+export_path="./TopDownShooter.apk"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -15,9 +15,13 @@ script_encryption_key=""
 [preset.0.options]
 
 graphics/32_bits_framebuffer=true
+xr_features/xr_mode=0
+xr_features/degrees_of_freedom=0
+xr_features/hand_tracking=0
 one_click_deploy/clear_previous_install=true
-custom_package/debug=""
-custom_package/release=""
+custom_template/debug=""
+custom_template/release=""
+custom_template/use_custom_build=false
 command_line/extra_args=""
 version/code=1
 version/name="1.0"
@@ -31,11 +35,9 @@ screen/support_normal=true
 screen/support_large=true
 screen/support_xlarge=true
 screen/opengl_debug=false
-launcher_icons/xxxhdpi_192x192=""
-launcher_icons/xxhdpi_144x144=""
-launcher_icons/xhdpi_96x96=""
-launcher_icons/hdpi_72x72=""
-launcher_icons/mdpi_48x48=""
+launcher_icons/main_192x192=""
+launcher_icons/adaptive_foreground_432x432=""
+launcher_icons/adaptive_background_432x432=""
 keystore/debug=""
 keystore/debug_user=""
 keystore/debug_password=""
@@ -205,15 +207,15 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/Users/zainul/Platformer/TopDownShooter.dmg"
+export_path="./TopDownShooter.dmg"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.1.options]
 
-custom_package/debug=""
-custom_package/release=""
+custom_template/debug=""
+custom_template/release=""
 application/name=""
 application/info="Made with Godot Engine"
 application/icon=""
@@ -223,8 +225,14 @@ application/short_version="1.0"
 application/version="1.0"
 application/copyright=""
 display/high_res=false
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
+codesign/enable=false
 codesign/identity=""
+codesign/timestamp=true
+codesign/hardened_runtime=true
 codesign/entitlements=""
+codesign/custom_options=PoolStringArray(  )
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
