--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./TopDownShooter.apk"
+export_path="C:/Users/june_/Desktop/InfiniteShooter.apk"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -23,7 +23,6 @@ one_click_deploy/clear_previous_install=true
 custom_template/debug=""
 custom_template/release=""
 custom_template/use_custom_build=false
-plugins/GodotAdMob=false
 command_line/extra_args=""
 version/code=1
 version/name="1.0"
