--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -52,7 +52,7 @@ architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
-permissions/custom_permissions=PoolStringArray(  )
+permissions/custom_permissions=PoolStringArray( "" )
 permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
 permissions/access_fine_location=false
@@ -137,7 +137,7 @@ permissions/process_outgoing_calls=false
 permissions/read_calendar=false
 permissions/read_call_log=false
 permissions/read_contacts=false
-permissions/read_external_storage=false
+permissions/read_external_storage=true
 permissions/read_frame_buffer=false
 permissions/read_history_bookmarks=false
 permissions/read_input_state=false
@@ -197,4 +197,4 @@ permissions/write_settings=false
 permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
-permissions/write_user_dictionary=false
+permissions/write_user_dictionary=true
